<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Send To Car</string>
	<string name="errorStartGoogleMaps">Cannot start Google Maps</string>
	<string name="vehicle">Vehicle</string>
	<string name="make">Make</string>
	<string name="account">Account</string>
	<string name="destination">Destination</string>
	<string name="destinationName">Name</string>
	<string name="address">Address</string>
	<string name="destinationTag">Tag</string>
	<string name="send">Send</string>
	<string name="cancel">Cancel</string>
	<string name="errorTitle">Error</string>
	<string name="ok">OK</string>
	<string name="showHelp">Show help</string>
	<string name="showOnStarWebsite">OnStar Website</string>
	<string name="errorIntent">App not started from the Google Maps share menu. See help for details.</string>
	<string name="loadingAddress">Loading address</string>
	<string name="errorDownload">Could not download address. Check your internet connection and try again</string>
	<string name="errorNotGoogleMaps">The shared link was not a valid Google Maps link</string>
	<string name="errorNoUrl">There was no valid URL in the shared link</string>
	<string name="choose">Choose one</string>
	<string name="validationMake">Please select a make</string>
	<string name="validationAccount">Please provide your account</string>
	<string name="validationDestination">Please enter a destination name</string>
	<string name="validationTag">Please enter a tag name</string>
	<string name="sendingToCar">Sending to car</string>
	<string name="sendingToGPS">Sending to GPS</string>
	<string name="errorSendToCar">Could not send the destination. Try again later</string>
	<string name="successCar">Destination successfully sent to car</string>
	<string name="successGPS">Destination successfully sent to GPS</string>
	<string name="statusInvalidAccount">Invalid account. Check that you entered it correctly and try again</string>
	<string name="statusInvalidTag">Invalid Destination Tag. Rename it and try again</string>
	<string name="statusOnStarMaxDestinations">There is currently a limit of 5 destinations that can be saved to OnStar. When you reach the limit, you cannot send a new destination (i.e. it doesn\'t overwrite one of the existing points). Please visit https://www.onstar.com/web/portal/odm and remove some destinations.</string>
	<string name="statusTagExists">A Destination Tag with this name already exists. Rename it and try again</string>
	<string name="statusDestinationNotSent">This destination cannot be sent to your car. Try a different destination</string>
	<string name="logViewer">Send To Car Log</string>
	<string name="menuHelp">Help</string>
	<string name="menuEdit">Edit address</string>
	<string name="infoStart">Start Google Maps and find a place</string>
	<string name="infoNext">Next</string>
	<string name="infoPrev">Previous</string>
	<string name="infoHowTo">How to Use</string>
	<string name="infoFinish">Finish</string>
	<string name="infoShare">Press "Menu" and click "Share"</string>
	<string name="infoSend">Select "Send To Car"</string>
	<string name="infoEnter">Select your car and hit "Send"</string>
	<string name="approximateAddress">Address is approximate</string>
	<string name="manualNumber">#</string>
	<string name="manualStreet">Street</string>
	<string name="manualCity">City</string>
	<string name="manualProvince">State/Province</string>
	<string name="manualPostalCode">Zip/Postal code</string>
	<string name="manualCountry">Country</string>
	<string name="manualCountryHint">2-letter code like US, FR, UK</string>
	<string name="manualPhone">Phone</string>
	<string name="notes">Notes</string>
	<string name="optional">Optional</string>
	<string name="listMapTitle">Start Google Maps</string>
	<string name="listMapDescription">Sends a map point to car</string>
	<string name="listManualTitle">Enter address</string>
	<string name="listManualDescription">Sends an address manually to car</string>
	<string name="listTutorialTitle">Tutorial</string>
	<string name="listTutorialDescription">Step-by-step guide to use the app</string>
	<string name="listHelpTitle">View Help</string>
	<string name="listHelpDescription">More information about the app</string>
	<string name="listRateTitle">Rate app</string>
	<string name="listRateDescription">If you like this app, please rate it!</string>
	<string name="listEmailTitle">Contact developer</string>
	<string name="listEmailDescription">If you have issues with this app, you can email the developer</string>
	<string name="redirect">Follow the instructions on this page to finish sending your destination</string>
	<string name="errorNoApp">No app is available to do this</string>
	<string name="fordDownload">In your car, press "Sync" and say "Services" to download the destination</string>
	<string name="screenshot">Screenshot</string>
	<string name="errorGoogleMapsLongPressBug">Due to a bug in the new version of Google Maps, a blank address was just shared from Google Maps to the Send To Car app.\n\nYou can work around this bug by searching for an address in the Google Maps app using the search bar instead of long-pressing on the map.\n\nPlease write to Google that this bug affects you.\n\nOpen the Google Maps app, pull open the panel to the left and click Send feedback.\n\nWrite something like: \"When long-pressing on the map then pressing the Share button, the shared Google Maps link doesn\'t point to any location.\"\n\nSorry for the inconvenience.\n\n- Julien Vanier</string>
	<string name="errorGoogleMapsIncompleteAddressBug">Due to a bug in the new version of Google Maps, an incomplete address was just shared from Google Maps to the Send To Car app. It contains the street address, but not the city, state and country so Send To Car cannot find your destination.\n\nYou can sometimes work around this bug by searching for a street, city and state in the Google Maps app using the search bar. You can also search for a business near your destination.\n\nPlease write to Google that this bug affects you.\n\nOpen the Google Maps app, pull open the panel to the left and click Send feedback.\n\nWrite something like: \"When searching for a street address then pressing the Share button, the new Google Maps shares an incomplete address without city and state.\"\n\nSorry for the inconvenience.\n\n- Julien Vanier</string>

</resources>